--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -3,8 +3,10 @@
 
     <application android:allowBackup="true"
                  android:label="@string/app_name"
+                 android:name="com.activeandroid.app.Application"
         >
 
     </application>
-
+    <meta-data android:name="AA_DB_NAME" android:value="Pending.db" />
+    <meta-data android:name="AA_DB_VERSION" android:value="1" />
 </manifest>
