--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -3,10 +3,9 @@
 
     <application android:allowBackup="true"
                  android:label="@string/app_name"
-                 android:name="com.activeandroid.app.Application"
-        >
-
+                 android:name="com.activeandroid.app.Application">
+        <meta-data android:name="AA_DB_NAME" android:value="Pending.db" />
+        <meta-data android:name="AA_DB_VERSION" android:value="6" />
+        <meta-data android:name="AA_SQL_PARSER" android:value="delimited" />
     </application>
-    <meta-data android:name="AA_DB_NAME" android:value="Pending.db" />
-    <meta-data android:name="AA_DB_VERSION" android:value="1" />
 </manifest>
