--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -3,15 +3,16 @@
 
     <application android:allowBackup="true"
                  android:label="@string/app_name"
-                 android:name="com.activeandroid.app.Application">
-        <meta-data android:name="AA_DB_NAME" android:value="Pending.db" />
-        <meta-data android:name="AA_DB_VERSION" android:value="6" />
-        <meta-data android:name="AA_SQL_PARSER" android:value="delimited" />
 
+                 ><!--android:name="com.activeandroid.app.Application"-->
+        <!--<meta-data android:name="AA_DB_NAME" android:value="Pending.db" />-->
+        <meta-data android:name="AA_DB_VERSION" android:value="6" />
+        <!--<meta-data android:name="AA_SQL_PARSER" android:value="delimited" />-->
         <receiver android:name=".ReachabilityBroadcastReceiver" >
             <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
         </receiver>
     </application>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 </manifest>
