--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,14 +1,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="verdad.retrofitsync">
+          package="verdad.retrosync">
 
     <application android:allowBackup="true"
                  android:label="@string/app_name"
+                 android:name="com.activeandroid.app.Application"
+                 >
 
-                 ><!--android:name="com.activeandroid.app.Application"-->
-        <!--<meta-data android:name="AA_DB_NAME" android:value="Pending.db" />-->
+        <meta-data android:name="AA_DB_NAME" android:value="Pending.db" />
         <meta-data android:name="AA_DB_VERSION" android:value="6" />
-        <!--<meta-data android:name="AA_SQL_PARSER" android:value="delimited" />-->
-        <receiver android:name=".ReachabilityBroadcastReceiver" >
+        <meta-data android:name="AA_SQL_PARSER" android:value="delimited" />
+        <receiver android:name="verdad.retrosync.ReachabilityBroadcastReceiver" >
             <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
